[FIX] account,web: fix alignment issue for favorite icon in project kanban
Steps:
- Install project module
- open kanban view

Issue:
- favorite icon is not aligned in project kanban card

Cause:
- In this PR-https://github.com/odoo/odoo/pull/124416/files they have remove the
  padding as they have alignment issue in accounting dashboard but due to that
  fix it is breaking project kanban card view favorite icon

Fix:
- So we have added padding so that it doesn't affect project kanban card
  favorite icon and also added padding 0 so accounting issue also gets solved

task-3442351

--- a/addons/account/static/src/scss/account_journal_dashboard.scss
+++ b/addons/account/static/src/scss/account_journal_dashboard.scss
@@ -33,6 +33,10 @@
         }
     }
 
+    .o_favorite{
+        padding-top: 0;
+    }
+
     &.o_kanban_ungrouped {
         .o_kanban_record {
             width: 450px;
